--- a/login.html
+++ b/login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <body>
  <form action="login.php" method="post">
- User:<input type="text" name="user"/><br>
- <input type="submit" name ="Submit" value="Submit"/>
+    User:<input type="text" name="user"/>
+    <input type="submit" value="submit"/>
  </form>
 </body>
