--- a/login.html
+++ b/login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <body>
- <form action="login.php" method="post">
+ <form action="login.php" method="POST">
     User:<input type="text" name="user"/>
-    <input type="submit" value="submit"/>
+    <input type="submit" name="Submit" value="Submit"/>
  </form>
 </body>
