starrting changes to files.php

--- a/login.html
+++ b/login.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <body>
+   <!-- form for user to type and submit their username -->
  <form action="login.php" method="POST">
     User:<input type="text" name="user"/>
     <input type="submit" name="Submit" value="Submit"/>
