--- a/login.html
+++ b/login.html
@@ -5,4 +5,5 @@
     User: <input type="text" name="user"/>
     <input type="submit" name="Submit" value="Submit"/>
  </form>
+ <p> If a user does not exist a new one will be created</p>
 </body>
