--- a/login.html
+++ b/login.html
@@ -5,13 +5,14 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <meta http-equiv="X-UA-Compatible" content="ie=edge">
    <title>File Server Login</title>
+   <link rel="styleshee" type="text/css" href="stylesheet.css">
 </head>
 
 <body>
    <!-- form for user to type and submit their username -->
  <form action="login.php" method="POST">
     User: <input type="text" name="user"/>
-    <input type="submit" name="Submit" value="Submit"/>
+    <div id="button"><input type="submit" name="Submit" value="Submit"/></div>
  </form>
  <p> If a user does not exist a new one will be created</p>
 </body>
