--- a/login.html
+++ b/login.html
@@ -5,15 +5,16 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <meta http-equiv="X-UA-Compatible" content="ie=edge">
    <title>File Server Login</title>
-   <link rel="styleshee" type="text/css" href="stylesheet.css">
+   <link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
-
+<div class="container">
+<div class="center">
 <body>
    <!-- form for user to type and submit their username -->
  <form action="login.php" method="POST">
     User: <input type="text" name="user"/>
-    <div id="button"><input type="submit" name="Submit" value="Submit"/></div>
+    <input type="submit" name="Submit" value="Submit"/>
  </form>
  <p> If a user does not exist a new one will be created</p>
-</body>
+</body></div></div>
 </html>
