--- a/login.html
+++ b/login.html
@@ -7,16 +7,16 @@
    <title>File Server Login</title>
    <link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
+<body>
 <div id="main">
 <div class="container">
 <div class="center">
-<body>
-  <img src="http://charma.uprm.edu/cms/events/events_bck/evte_inp">
+  <img src="http://charma.uprm.edu/cms/events/events_bck/evte_inp" alt="">
    <!-- form for user to type and submit their username -->
  <form action="login.php" method="POST">
     User: <input type="text" name="user"/>
     <input type="submit" name="Submit" value="Submit"/>
  </form>
  <p> If a user does not exist a new one will be created</p>
-</body></div></div></div>
+</div></div></div></body>
 </html>
